sprzątanie, dodanie makefile

--- a/serwer/makefile
+++ b/serwer/makefile
@@ -4,22 +4,16 @@ CC = gcc
 # Flagi kompilatora
 CFLAGS = -Wall -Wextra -std=c11
 
-# Nazwa pliku wykonywalnego
-TARGET = main
+# plik docelowy
+TARGET = serwer
 
-# Pliki źródłowe
-SRC = game.c
+# nazwa komilowanego pliku
+SRC = serwer_binary.c
 
-# Domyślny cel - kompilacja programu
 all: $(TARGET)
 
-# Reguła kompilacji
 $(TARGET): $(SRC)
 	$(CC) $(CFLAGS) -o $(TARGET) $(SRC)
-
-# Cel do uruchomienia programu
-run: $(TARGET)
-	./$(TARGET)
 
 # Cel do czyszczenia plików kompilacji
 clean:
